Bug 298003 - Unable to post to blogspot using either Blogger 1.0 or Blogspot API's. Failed to regex ID or XML Markup errors.
Summary: Unable to post to blogspot using either Blogger 1.0 or Blogspot API's. Failed...
Status: RESOLVED FIXED
Alias: None
Product: blogilo
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Mehrdad Momeny
URL: http://patscompservices.blogspot.com
Keywords:
: 285293 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-12 23:04 UTC by Patrick Dickey
Modified: 2014-08-20 07:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Dickey 2012-04-12 23:04:38 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.151 Safari/535.19
Build Identifier: 

When I tried to autoconfigure my blog, using the blogspot API, I got failed to regex ID errors. Using the Blogger API, I got XML Markup errors. I manually entered my blog ID and downloaded my posts.

The bug that I'm reporting is somewhat related to those, in that when I submit posts to my blog, I get the same errors as when I tried to configure the blog. I'm not sure if there was a change in the Blog* API (Google's end) or if it's an issue with Blogilo.

Reproducible: Always

Steps to Reproduce:
1. Attempt to Configure a blogspot blog (manually works--auto doesn't)
2. Create a post
3. Attempt to submit the post using either of the API's for Blogger.
Actual Results:  
I received Submitting Post failed errors.

Using the Blogspot API, I received this in the details:
An error occurred in the last transaction.
Server (Atom) error: Could not regexp the id out of the result.

Using the Blogger 1.0 API, I received this in the details:
An error occurred in the last transaction.
Server (XMLRPC) error: Unknown type of XML markup received

Expected Results:  
I expected the post to upload, since Blogilo is able to "view" it in my blog style. And since it has the API's to interact with Blogger's system.
Comment 1 Rogelio 2012-08-08 01:05:17 UTC
Been getting "An error occurred in the last transaction. Server (Atom) error: Could not regexp the id out of the result." whenever I post to Blogger. I am running Ubunu 12.04LTS, problem is reproducible ALWAYS. The only way I can get the post to go through is if I edit out all HTML tags from the article source code and resubmit that, but by doing so the structure of the paragraphs is shot. A single /BR (line break) within the article text will cause this problem to appear.
Comment 2 Rogelio 2012-08-08 01:17:39 UTC
From the 'report a bug' overlay window on the Blogilo program:

Version: 1.1
OS: Linux (x86_64) release 3.2.0-27-generic
Compiler: gcc
Comment 3 Rogelio 2012-08-08 01:25:36 UTC
Confirmed that the following error reports are issued based on the API used to submit:

Blogspot API:
"An error occurred in the last transaction. Server (Atom) error: Could not regexp the id out of the result."

Blogger 1.0 API:
"An error occurred in the last transaction. Server (XMLRPC) error: Unknown type of XML markup received"
Comment 4 Alexander Lemberg 2012-11-23 16:48:17 UTC
I getting the same error when i trying to send "empty" post. But post was not empty, it contained open tag <br>. Check your "HTML editor" tab first. Sorry for bad English.
Comment 5 Myriam Schweingruber 2013-05-12 09:58:27 UTC
*** Bug 285293 has been marked as a duplicate of this bug. ***
Comment 6 Orion 2014-06-04 09:00:46 UTC
you can try this, I can then connect but at this moment not post:

Kubuntu 14.04 and KDE 4.13.1
----------------
 How to manually Configure BLOGILO (Blog manager for linux) for blogger.com
1)- Blog/Homepage URL- http://www.blogger.com/blogger.g?blogID=1853225125323725410 (some thing like this, copy the URL after login on blogger and open design/loyout page for your specific blog)

2) USERNAME and PASSWORD -- abc@gmail.com and XXXXXXXX (as your login ID)


ADVANCED-
1)- Select from dropdown box -- BLOGSPOT.COM
2)- Blog ID- enter from above URL, like (1853225125323725410)
3)- Text direction -- as u wish
now OK option is appeared
then click OK
---------------------
Comment 7 Alexander Lemberg 2014-06-04 21:29:30 UTC
(In reply to comment #6)
> you can try this, I can then connect but at this moment not post:
> 
> Kubuntu 14.04 and KDE 4.13.1
> ----------------
>  How to manually Configure BLOGILO (Blog manager for linux) for blogger.com
> 1)- Blog/Homepage URL-
> http://www.blogger.com/blogger.g?blogID=1853225125323725410 (some thing like
> this, copy the URL after login on blogger and open design/loyout page for
> your specific blog)
> 
> 2) USERNAME and PASSWORD -- abc@gmail.com and XXXXXXXX (as your login ID)
> 
> 
> ADVANCED-
> 1)- Select from dropdown box -- BLOGSPOT.COM
> 2)- Blog ID- enter from above URL, like (1853225125323725410)
> 3)- Text direction -- as u wish
> now OK option is appeared
> then click OK
> ---------------------
Yes, actually, that kind manual configuration also works for earlier KDE releases.
Comment 8 Daniel Vrátil 2014-07-07 20:01:22 UTC
Git commit 76c6aaef93db7a11d05f63c542d756be5b220ea5 by Dan Vrátil.
Committed on 07/07/2014 at 19:54.
Pushed by dvratil into branch 'master'.

Blogilo: Use the new Blogger backend for blogspot.com instead of GData
FIXED-IN: 4.14

M  +20   -28   blogilo/src/addeditblog.cpp
M  +2    -1    blogilo/src/addeditblog.h
M  +14   -8    blogilo/src/backend.cpp
M  +2    -0    blogilo/src/backend.h
M  +19   -5    blogilo/src/bilboblog.cpp
M  +3    -1    blogilo/src/bilboblog.h
M  +162  -2    blogilo/src/dbman.cpp
M  +7    -0    blogilo/src/dbman.h

http://commits.kde.org/kdepim/76c6aaef93db7a11d05f63c542d756be5b220ea5
Comment 9 Orion 2014-08-20 07:18:46 UTC
On Kubuntu 14.04 using KDE 4.14 RC it now works 

Thanks for fixing!