Blogilo: Use the new Blogger backend for blogspot.com instead of GData

BUG: 298003
FIXED-IN: 4.14